--- a/styles/main.css
+++ b/styles/main.css
@@ -99,7 +99,7 @@ nav ul li a:hover, .side-nav a:hover {
   background-color: orange;
 }
 
-.project1, .project2, .project3, .project4, .project5, .project6 {
+.project1, .project2, .project3, .project4, .project5, .project6, .project7 {
   position: relative;
   width: 100%;
 }
@@ -123,7 +123,7 @@ nav ul li a:hover, .side-nav a:hover {
 
 }
 
-.project1:hover .overlay, .project2:hover .overlay, .project3:hover .overlay, .project4:hover .overlay, .project5:hover .overlay, .project6:hover .overlay {
+.project1:hover .overlay, .project2:hover .overlay, .project3:hover .overlay, .project4:hover .overlay, .project5:hover .overlay, .project6:hover .overlay, .project7:hover .overlay {
   opacity: 1;
 }
 
@@ -203,6 +203,7 @@ h3 {
 }
 
 /******FOR ALL PROJECTS MOBILE*****/
+
 .container p {
   color: black;
   font-size: 1.6rem;
