--- a/styles/Altisource.css
+++ b/styles/Altisource.css
@@ -17,3 +17,23 @@ section {
 .ost {
   margin: 0rem;
 }
+
+video {
+  display: block;
+  margin: auto;
+  padding-top: 3rem;
+}
+
+p {
+  margin-bottom: 2rem;
+}
+
+.subtitle {
+  margin-bottom: 0;
+}
+
+@media(min-width: 320px){
+  video {
+      width: 50%;
+  }
+}
