--- a/styles/main.css
+++ b/styles/main.css
@@ -134,7 +134,7 @@ nav ul li a:hover, .side-nav a:hover {
   position: absolute;
   top: 50%;
   left: 50%;
-  text-align: right;
+  text-align: left;
   transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
 
