--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,11 @@ h2 {
   margin-bottom: 2.2rem;
 }
 
+a {
+  text-decoration: none;
+  color: inherit; /* optional: keeps text from turning blue */
+}
+
 /******NAVBAR******/
 nav {
   display: grid;      /******MOBILE******/
