--- a/styles/main.css
+++ b/styles/main.css
@@ -209,6 +209,30 @@ nav, .grid1, .container {
   width: 90%;
 }
 
+/******SLIDES******/
+iframe {
+  display: block;
+  margin: 0 auto;
+}
+
+.slide-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 ratio */
+  height: 0;
+  overflow: hidden;
+  margin: 20px 0;
+}
+
+.slide-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+
 /******FOOTER******/
 footer {
   background-color: #212121;
