--- a/styles/main.css
+++ b/styles/main.css
@@ -158,7 +158,7 @@ nav ul li a:hover, .side-nav a:hover {
 /******HERO******/
 .hero {
                           /******MOBILE******/
-  padding-top: 8rem;
+  padding: 6rem;
 }
 
 .hero div {
