--- a/styles/main.css
+++ b/styles/main.css
@@ -195,7 +195,7 @@ h1 {
 h3 {
   color: #10141C;
   font-size: 2rem;
-  line-height: .6cm;
+  line-height: .8cm;
 }
 
 /******FOR ALL PROJECTS MOBILE*****/
@@ -304,7 +304,7 @@ footer ul li a{
 
   h3 {
     font-size: 2.5rem;
-    line-height: .8cm;
+    line-height: 1cm;
   }
 
   .container {
